# claude-code-trace

./: .gitignore  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vitest.config.ts
.claude/: settings.json
.github/: dependabot.yml
docs/: docker.md
script/: docker-entrypoint.sh  install.sh  redeploy.sh
shared/: diff.test.ts  diff.ts  projectTree.test.ts  projectTree.ts  types.ts
specs/: 00-overview.md  01-parser-pipeline.md  02-file-watcher.md  03-state-management.md  04-http-api.md  05-frontend-web.md  06-tui.md  07-data-types.md  08-session-lifecycle.md  09-subagent-linking.md  10-tool-taxonomy.md  11-project-tree.md  12-cli-launcher.md  13-item-rendering.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: convert.rs  http_api.rs  lib.rs  main.rs  process.rs  session_load.rs  settings.rs  state.rs  watcher.rs  wsl.rs
src-tauri/src/commands/: cors.rs  debug.rs  git.rs  mod.rs  picker.rs  session.rs  settings.rs  terminal.rs  wsl.rs
src-tauri/src/parser/: cache.rs  chunk.rs  classify.rs  dategroup.rs  debuglog.rs  entry.rs  last_output.rs  linereader.rs  mod.rs  ongoing.rs  patterns.rs  project.rs  sanitize.rs  session.rs  subagent.rs  summary.rs  taxonomy.rs  team.rs
src-tauri/tests/: acl_consistency.rs
tui/: package-lock.json  (+1 more)
tui-py/: api.py  app.py  cctrace.tcss  data_types.py  diff_utils.py  format_utils.py  items.py  keybindings.py  main.py  project_tree.py  requirements.txt  resume_command.py  ruff.toml  sse.py  theme.py
(+831 files in other folders)
